# octetos-math

./: .gitignore  Makefile.am  configure.ac  math.cbp  math.depend  math.layout
src/: Functions.hh  Intervals.hh  Line.hh  Makefile.am  Point.hh  Prime.cc  Prime.hh  Vector.hh  algebra.cc  algebra.hh  core.cc  core.hh  defines.hh  equs.hh  funcs-ext.hh  funcs.hh  geometry.cc  geometry.hh  matrix.hh  metry.cc  metry.hh  octetos-math.pc.in  prob.hh  sta-ops.hh  statics-deprecated.hh  statics.hh
tests/: Makefile.am  funcs.hh  main.cc  sta-ops.cc  statics.cc  v0-deprecated.cc
